Add comments for .net version

--- a/ReadSSLCertFromKeyVault-Net/ReadSSLCert/App.config
+++ b/ReadSSLCertFromKeyVault-Net/ReadSSLCert/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="CredentialKeyVaultAccessCertThumbprint" value="dummy"/>    
-    <add key="CredentialKeyVaultAuthClientId" value="dummy"/>    
-    <add key="sslCertUri" value="dummy"/>
+    <add key="CredentialKeyVaultAccessCertThumbprint" value="0ed3c86cda68e9f087a93ec25b95b7c71cb86ae6"/>    
+    <add key="CredentialKeyVaultAuthClientId" value="e128e94b-74fb-4ed9-9c80-505fcc998a71"/>    
+    <add key="sslCertUri" value="https://test-https-selfkeyvault3.vault.azure.cn/secrets/11147c40-6160-4422-a327-bfecf23b9314/ea5856f199eb404b962ac598538d50ea"/>
   </appSettings>
 </configuration>
